<resources>
    <string name="app_name">收银</string>
    <string name="app_name_short">收银</string>
    <string name="label_login_title">欢迎使用</string>
    <string name="label_pls_input_cashier_account">请输入收银员账号</string>
    <string name="label_account_hint_please_input">请输入收银账号</string>
    <string name="label_password_hint_please_input">请输入收银密码</string>
    <string name="label_login_agree_user_agreement">登录代表您已同意用户协议和隐私政策</string>
    <string name="label_login_account">账号</string>
    <string name="label_login_account_english">ACCOUNT</string>
    <string name="label_login_account_hint">请输入收银账号</string>
    <string name="label_login_password">密码</string>
    <string name="label_login_password_english">PASSWORD</string>
    <string name="label_login_password_hint">请输入收银密码</string>
    <string name="label_log_off_thanks_for_using">感谢使用</string>
    <string name="label_log_off_exit">退出</string>
    <string name="label_update_version_dialog_word_update_content">更新内容</string>
    <string name="label_update_version_dialog_sentence_new_version_found">发现新版本</string>
    <string name="label_update_version_dialog_update_version_btn">升级</string>
    <string name="label_update_version_dialog_file_download_failed">文件下载失败</string>
    <string name="label_update_version_dialog_failed_update">更新失败</string>
    <string name="label_update_version_no_install_permission">无应用安装权限</string>
    <string name="label_guide_page_default_shop_name">便利店</string>
    <string name="label_guide_page_welcome_str">欢迎光临%s\n请自助下单</string>
    <string name="label_guide_page_using_step_str">使用步骤</string>
    <string name="label_guide_page_using_step_str_eng">STEPS FOR USAGE</string>
    <string name="label_guide_page_choose_goods_str">挑选商品</string>
    <string name="label_guide_page_face_goods_to_scanner_str">将商品条形码\n对准扫码器</string>
    <string name="label_guide_page_finish_and_pay">结算并支付</string>
    <string name="label_guide_page_go_scan_goods_code">去扫描商品\n条形码</string>
    <string name="label_scan_goods_member_register_or_login">会员登录/注册</string>
    <string name="label_scan_goods_member_register_or_login_url_type"><u>会员登录/注册</u></string>
    <string name="label_scan_goods_member_can_get_discount">(会员可优惠￥%s)</string>
    <string name="label_scan_goods_member_can_get_points">(会员可获得%s分)</string>
    <string name="label_scan_goods_clear_shopping_cart">清空购物车(%ds)</string>
    <string name="label_scan_goods_can_not_get_code_go_search">扫不到条码?</string>
    <string name="label_scan_goods_can_not_get_code_go_search_blue_part">去搜索</string>
    <string name="label_scan_goods_pls_face_goods_to_scanner_str">请将商品条形码对准扫码器</string>
    <string name="label_scan_goods_list_title_goods_name">商品名称</string>
    <string name="label_scan_goods_list_title_unit_price">单价</string>
    <string name="label_scan_goods_list_title_goods_num">数量</string>
    <string name="label_scan_goods_list_title_total_amount">小计</string>
    <string name="label_scan_goods_btn_goto_bill">结算</string>
    <string name="label_scan_goods_goods_num_total">数量 : </string>
    <string name="label_scan_goods_total_amount">合计 : </string>
    <string name="label_scan_goods_member_price_label">会员价</string>
    <string name="label_scan_goods_activity_price_label">活动价</string>
    <string name="label_scan_goods_dialog_title_member">会员</string>
    <string name="label_scan_goods_dialog_phone_not_match_face">手机号与会员人脸不匹配\n您可以直接登录/注册</string>
    <string name="label_scan_goods_dialog_already_are_member_go_login">去登录</string>
    <string name="label_scan_goods_dialog_scan_code_login">扫码登录</string>
    <string name="label_scan_goods_dialog_not_member_yet">还不是会员,</string>
    <string name="label_scan_goods_dialog_not_member_yet_blue_part">去注册</string>
    <string name="label_scan_goods_dialog_title_member_login">会员登录</string>
    <string name="label_scan_goods_dialog_pls_input_member_phone">请输入会员手机号</string>
    <string name="label_scan_goods_dialog_member_can_get_discount">会员下单，可以优惠¥%s</string>
    <string name="label_scan_goods_btn_already_are_member">已是会员,去登录</string>
    <string name="label_scan_goods_btn_go_register">去注册</string>
    <string name="label_scan_goods_dialog_member_not_exist">会员不存在</string>
    <string name="label_scan_goods_dialog_recognized_member_face">识别到当前会员</string>
    <string name="label_scan_goods_dialog_input_member_phone_last_four">请输入会员手机号后四位</string>
    <string name="label_scan_goods_dialog_member_login_success_notice">%s\n欢迎使用%s自助购</string>
    <string name="label_scan_goods_recommend">店长推荐</string>
    <string name="label_scan_goods_no_name_goods">无名商品</string>
    <string name="label_search_goods_input_goods_code">请输入商品条形码后6位</string>
    <string name="label_member_dialog_point">积分</string>
    <string name="label_member_dialog_balance">储值余额</string>
    <string name="label_member_dialog_coupon">优惠券</string>
    <string name="label_member_dialog_coupon_can_not_use">以下优惠券不可用</string>
    <string name="label_member_dialog_coupon_can_not_price_break_discount">未达到满减条件</string>
    <string name="label_member_dialog_coupon_price_condition_format">满%s减%s</string>
    <string name="label_register_member_did_not_register_success">注册未成功，请重试</string>
    <string name="label_register_member_did_not_get_address">未取得注册地址,重新获取</string>
    <string name="label_register_member_please_use_wx_scan_code">请用微信扫描下方二维码</string>
    <string name="label_register_member_register_member">会员注册</string>
    <string name="label_register_member_member_login">会员登录</string>
    <string name="label_register_member_finish_register_member">完成注册</string>
    <string name="label_register_member_welcome_string">欢迎使用自助购</string>
    <string name="label_register_member_phone">手机号</string>
    <string name="label_register_member_name">姓名</string>
    <string name="label_register_member_birthday">生日</string>
    <string name="label_register_member_face_recognize">人脸识别</string>
    <string name="label_register_member_face_recognize_notice">(识别后下次购物可以自动登录)</string>
    <string name="label_register_member_go_face_recognize">去识别</string>
    <string name="label_register_member_retry_face_recognize">重新识别</string>
    <string name="label_register_member_pls_input_phone">请输入手机号</string>
    <string name="label_register_member_pls_input_name">请输入姓名</string>
    <string name="label_register_member_pls_choose_birthday">请选择生日</string>
    <string name="label_register_member_face_processing">人脸识别中</string>
    <string name="label_register_member_on_analyze_pic">图片处理中</string>
    <string name="label_register_member_take_pic_btn">拍摄</string>
    <string name="label_register_member_retake_pic">重拍</string>
    <string name="label_register_member_jump"><u>跳过</u></string>
    <string name="label_bill_mvp_should_pay">应付金额</string>
    <string name="label_bill_mvp_ori_amount">原价金额</string>
    <string name="label_bill_mvp_goods_discount">商品优惠</string>
    <string name="label_bill_mvp_activity_discount">活动优惠</string>
    <string name="label_bill_mvp_coupon">优惠券</string>
    <string name="label_bill_mvp_no_enable_coupon">无可用优惠券</string>
    <string name="label_bill_mvp_point_discount">积分抵现</string>
    <string name="label_bill_mvp_coupon_enable_num">%d张可用</string>
    <string name="label_bill_mvp_point_already_have">(%d积分)</string>
    <string name="label_bill_mvp_pay_right_away">立即支付</string>
    <string name="label_bill_mvp_activity_announce">满%s减%s</string>
    <string name="label_coupon_activity_no_coupon">无优惠券</string>
    <string name="label_coupon_activity_fail_get_coupon">获取优惠券失败</string>
    <string name="label_coupon_activity_do_not_use_coupon">不使用券</string>
    <string name="label_coupon_activity_choose_coupon">选择优惠券</string>
    <string name="label_coupon_activity_choose">选择</string>
    <string name="label_coupon_activity_chosen">已选择</string>
    <string name="label_coupon_activity_useful_coupon_num">可用优惠券(%d)</string>
    <string name="label_coupon_activity_useless_coupon_num">不可用优惠券(%d)</string>
    <string name="label_coupon_activity_no_invalid_time">永远</string>
    <string name="label_payment_custom_show_code_pay">出示付款码</string>
    <string name="label_payment_custom_scan_code_pay">扫一扫</string>
    <string name="label_payment_face_pay">刷脸支付</string>
    <string name="label_payment_member_card_pay">会员储值卡</string>
    <string name="label_payment_not_pay_return_shopping_cart_format">内未支付将返回购物车</string>
    <string name="label_payment_pls_show">请出示付款码\n支持支付宝/微信</string>
    <string name="label_payment_did_not_pay_for_now_short">暂时不买了</string>
    <string name="label_payment_did_not_pay_for_now">暂时不买了\n清空购物车</string>
    <string name="label_payment_clear_shopping_cart">清空购物车</string>
    <string name="label_payment_member_not_exist">会员不存在</string>
    <string name="label_payment_pls_scan_code_pay">请扫描二维码付款</string>
    <string name="label_payment_pay_success">支付成功</string>
    <string name="label_payment_pay_fail">支付失败</string>
    <string name="label_payment_got_it">知道了</string>
    <string name="label_payment_repay">重新支付</string>
    <string name="label_payment_sure_not_pay_and_clear_cart">确定不购买商品吗?</string>
    <string name="label_payment_jianhang_fail_get_authcode">支付结果未知</string>
    <string name="label_payment_jiaohang_wechat">微信</string>
    <string name="label_payment_jiaohang_ali">支付宝</string>
    <string name="label_payment_jiaohang_saoyisao">扫一扫</string>
    <string name="label_payment_jiaohang_chongzhi">会员储值</string>
    <string name="label_payment_jiaohang_choose_pay_method">请选择收款方式</string>
    <string name="label_payment_jiaohang_title_bill">收款</string>
    <string name="label_payment_placing_order">下单中</string>
    <string name="label_payment_result_btn_str">知道了</string>
    <string name="label_payment_fail_place_order">下单失败</string>
    <string name="label_patmemt_fail_face_pay">人脸支付失败</string>
    <string name="label_member_store_member_store_str">会员储值</string>
    <string name="label_member_store_price_format_str">售价%s元</string>
    <string name="label_member_store_recharge_success">充值成功</string>
    <string name="label_member_store_recharge_fail">充值失败</string>
    <string name="label_member_store_repay">重新支付</string>
    <string name="label_member_store_merchant_can_not_use_store">商户未开通此功能</string>
    <string name="label_member_store_recharge_now">立刻充值</string>
    <string name="label_member_store_not_a_member">当前用户不是会员</string>
    <string name="label_member_store_fail_get_recharge_list">获取充值规则失败</string>
    <string name="label_member_store_nothing_here">什么也没有</string>
    <string name="label_member_store_no_enable_recharge_rule">商户未设置充值金额，请联系商户</string>
    <string name="label_member_store_wrong_recharge_data">储值金额错误</string>
    <string name="label_member_store_wrong_pay_fields">错误的支付请求</string>
    <string name="label_member_store_fail_place_recharge_order">充值订单下单失败</string>
    <string name="label_member_store_pay_way_notice">会员储值卡支付</string>
    <string name="label_member_store_focus_code_to_camera">请将会员码对准上方摄像头</string>
    <string name="label_member_store_trans_amount">支付金额 : ￥%s</string>
    <string name="label_member_store_pay_title">支付</string>
    <string name="label_member_store_wrong_code_type">错误的码类型</string>
    <string name="label_member_store_fail_decode">解码失败</string>
    <string name="label_member_store_code_do_not_match_member">储值码与会员不匹配</string>
    <string name="label_member_store_get_member_by_code_fail">通过码获取会员信息失败</string>
    <string name="label_member_store_cancel_order_fail">取消旧订单失败</string>
    <string name="label_member_store_re_place_order_fail">重新下单失败</string>
    <string name="label_member_store_pls_scan_store_pay_code">请扫码进行储值支付</string>
    <string name="label_member_store_change_to_custom_show_code">展示储值码支付</string>
    <string name="label_member_store_fail_get_store_code">获取储值码失败</string>
    <string name="label_enum_unknown_pay_str">未知</string>
    <string name="label_top_bar_exit">退出</string>
    <string name="btn_login">登录</string>
    <string name="btn_finish">完成</string>
</resources>