<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    tools:context="com.dyc.order.cashier.mvp.activity.other.LoginMVPActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/toollibrary_white"
        android:textStyle="bold"
        android:layout_marginStart="27dp"
        android:layout_marginTop="91.5dp"
        android:text="@string/label_login_title"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/txt_name_new"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="84dp"
        android:layout_marginStart="7dp"/>

    <TextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_pls_input_cashier_account"
        android:textColor="@color/toollibrary_white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/accountStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_account"
        android:textSize="15sp"
        android:textColor="@color/normal_item_text_color_gray_dark"
        app:layout_constraintStart_toStartOf="@id/notice"
        app:layout_constraintTop_toBottomOf="@id/notice"
        android:layout_marginTop="101dp"/>

    <TextView
        android:id="@+id/accountStrEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_account_english"
        android:textSize="15sp"
        android:textColor="@color/normal_item_text_color_hint"
        android:layout_marginStart="3.33dp"
        app:layout_constraintStart_toEndOf="@id/accountStr"
        app:layout_constraintBaseline_toBaselineOf="@id/accountStr"
        android:alpha="0.3"/>

    <EditText
        android:theme="@style/MyEditText"
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23.5dp"
        android:layout_marginEnd="27dp"
        android:hint="@string/label_account_hint_please_input"
        android:text="18559239787"
        android:textSize="17sp"
        android:textColor="@color/normal_item_text_color"
        android:textColorHint="@color/normal_item_text_color_hint"
        android:paddingBottom="20dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/accountStr"
        app:layout_constraintStart_toStartOf="@id/accountStr" />

    <TextView
        android:id="@+id/pwdStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/accountStr"
        app:layout_constraintTop_toBottomOf="@id/account"
        android:layout_marginTop="20dp"
        android:text="@string/label_login_password"
        android:textSize="15sp"
        android:textColor="@color/normal_item_text_color_gray_dark"/>

    <TextView
        android:id="@+id/pwdStrEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pwdStr"
        app:layout_constraintBaseline_toBaselineOf="@id/pwdStr"
        android:layout_marginStart="3.33dp"
        android:text="@string/label_login_password_english"
        android:textSize="15sp"
        android:textColor="@color/normal_item_text_color_hint"
        android:alpha="0.3"/>

    <EditText
        android:theme="@style/MyEditText"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23.5dp"
        android:layout_marginEnd="27dp"
        android:paddingBottom="20dp"
        android:hint="@string/label_password_hint_please_input"
        android:textColorHint="@color/normal_item_text_color_hint"
        android:text="111111"
        android:textSize="17sp"
        android:textColor="@color/normal_item_text_color"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/pwdStr"
        app:layout_constraintStart_toStartOf="@id/pwdStr"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/toollibrary_circle_corner_btn"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="57dp"
        android:text="@string/btn_login"
        android:textSize="15sp"
        android:textColor="@color/toollibrary_white"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>